@@ -1,3 +1,9 @@
+2016-09-08  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* application-src/amrandom.pl: Do not check the device, set
+	  size_level_1
+	* common-src/shm-ring.c (cleanup_shm_ring, close_producer_shm_ring,
+	  close_consumer_shm_ring): Close the shm memory
+
 2016-09-06  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Restore.pm: Fix call to remove_for_restore_label and
 	  remove_for_restore_holding
